# StellarProperties

./: .gitattributes  .gitignore  Codebase_Improvement_Report.md  Dockerfile  README.md  docker-compose.yml  old_test_sdss_spectrum.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python_tests.yml
MOSES_spectra/pickles/: example_output.pckl
data/: MOSES_catalogue.fits  spec-0266-51630-0146.fits
data/CaT_library_v9.1_FITS/: scan004.fits  scan005.fits  scan007.fits  scan010.fits  scan012.fits  scan013.fits  scan014.fits  scan019.fits  scan020.fits  scan021.fits  scan022.fits  scan026.fits  scan027.fits  scan032.fits  scan033.fits  scan035.fits  scan036.fits  scan038.fits  scan039.fits  scan041.fits  scan045.fits  scan046.fits  scan048.fits  scan049.fits  scan057.fits  scan058.fits  scan061.fits  scan065.fits  scan069.fits  scan072.fits  scan076.fits  scan078.fits  scan080.fits  scan082.fits  scan083.fits  scan086.fits  scan088.fits  scan089.fits  scan091.fits  scan092.fits  (+295 more)
data/EMILES-IR_FSF_files/: EMILES-IR_age_grid.npy  EMILES_all_data_3D.npy
data/EMILES_FSF_files/: EMILES_age_grid.npy  EMILES_all_data_3D.npy  EMILES_met_grid.npy
data/EMILES_photometric_predictions/: MASSES_Padova_Chabrier_baseFe.txt  filters_HST.res
data/Lick_and_models/: Miles_Indicies_BaSTI_Chabrier.fits  Miles_Indicies_BaSTI_Chabrier_interpolated.fits  TMB_TMK_interpolated_alpha_model.fits  alpha_models_ti_schiavon_reinterpolated_log_age_nolick.fits
data/MILES_FSF_files/: MILES_all_data_3D.npy  (+1 more)
docker/: Dockerfile  requirements.txt
examples/: analyse_galaxy.py
(+3361 files in other folders)
